--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="paypal-button-container"></div>
 <form action="http://localhost:8080/payment/create/" method="post">
-
+    <input type="text" name="total" id="total">
     <!-- Display the payment button. -->
     <input type="image" name="submit" border="0"
            src="https://www.paypalobjects.com/webstatic/en_US/i/btn/png/btn_buynow_107x26.png"
