added facebook sign in functionality

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -9,7 +9,7 @@
 <div class="container">
 
     <h1 class="col-sm-12">Login</h1>
-    <form th:action="@{/login}" method="POST" >
+    <form th:action="@{/login/local}" method="POST" >
         <div class="row col-sm-6">
             <div class="form-group">
                 <label class="col-sm-3">Username</label>
