added "sign in with google" button

--- a/src/main/resources/static/login.html
+++ b/src/main/resources/static/login.html
@@ -35,6 +35,13 @@
             <input type="submit" value="Login using Facebook" class="btn btn-primary" />
         </form>
     </div>
+    <div class="col-sm-12">
+        <form action="/signin/google" method="POST">
+            <input type="hidden" name="scope" value="profile" />
+            <!--<input type="hidden" name="scope" value="https://www.googleapis.com/auth/userinfo.profile https://www.googleapis.com/auth/userinfo#email https://www.googleapis.com/auth/plus.me https://www.googleapis.com/auth/tasks https://www-opensocial.googleusercontent.com/api/people" />-->
+            <input type="submit" value="Login using Google" class="btn btn-primary" />
+        </form>
+    </div>
 
 </div>
 </body>
